[gd_scene load_steps=10 format=3 uid="uid://bhpj4bcxbf7t5"]

[ext_resource type="Theme" uid="uid://brnraesdacowk" path="res://Assets/Themes/default_theme.tres" id="1_a8ds3"]
[ext_resource type="Script" path="res://Scenes/7 - Menu/Scripts/start_menu.gd" id="2_vtxti"]
[ext_resource type="FontFile" uid="uid://cl7cbmljl0hax" path="res://Assets/Fonts/bloodcrow.ttf" id="3_3dc5p"]
[ext_resource type="Texture2D" uid="uid://ukn5f4w0nmrr" path="res://Assets/Images/title_screen.png" id="3_ld8ge"]
[ext_resource type="AudioStream" uid="uid://tit5ly7w62g5" path="res://Assets/Audio/Music/Start Menu Theme.mp3" id="4_j86rs"]
[ext_resource type="AudioStream" uid="uid://dlsn6v0pyvx3x" path="res://Assets/Audio/SFX/Menu/MenuClick.mp3" id="5_6gohf"]
[ext_resource type="AudioStream" uid="uid://cmx61yodif4s3" path="res://Assets/Audio/SFX/Menu/MenuSelect.mp3" id="6_l5yxv"]
[ext_resource type="Theme" uid="uid://dy2shwb78l1s1" path="res://Assets/Fonts/Styles/button.tres" id="6_n2ath"]
[ext_resource type="PackedScene" path="res://Scenes/7 - Menu/Scenes/credits.tscn" id="10_wl6dw"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a8ds3")
script = ExtResource("2_vtxti")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ld8ge")

[node name="Padding" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 79.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VerticalAllignment" type="VBoxContainer" parent="Padding"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = -4
alignment = 2

[node name="Title" type="Label" parent="Padding/VerticalAllignment"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.298039)
theme_override_constants/shadow_offset_x = 17
theme_override_constants/shadow_offset_y = 40
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_3dc5p")
theme_override_font_sizes/font_size = 120
text = "Frankensitter
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Line Break" type="Control" parent="Padding/VerticalAllignment"]
custom_minimum_size = Vector2(0, 22)
layout_mode = 2

[node name="ButtonStart" type="Button" parent="Padding/VerticalAllignment"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_n2ath")
theme_override_fonts/font = ExtResource("3_3dc5p")
theme_override_font_sizes/font_size = 82
text = "Start"
flat = true

[node name="ButtonCredits" type="Button" parent="Padding/VerticalAllignment"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_n2ath")
theme_override_font_sizes/font_size = 82
text = "Credits"
flat = true

[node name="ButtonQuit" type="Button" parent="Padding/VerticalAllignment"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("6_n2ath")
theme_override_fonts/font = ExtResource("3_3dc5p")
theme_override_font_sizes/font_size = 82
text = "Quit
"
flat = true

[node name="Audio" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_j86rs")
volume_db = -15.0
autoplay = true
bus = &"Music"

[node name="Click" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_6gohf")
volume_db = 5.843
pitch_scale = 1.01
bus = &"SFX"

[node name="Select" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_l5yxv")
volume_db = -11.9
pitch_scale = 1.32
bus = &"SFX"

[node name="Credits" parent="." instance=ExtResource("10_wl6dw")]
visible = false
layout_mode = 1

[connection signal="focus_entered" from="Padding/VerticalAllignment/ButtonStart" to="." method="_on_button_start_focus_entered"]
[connection signal="mouse_entered" from="Padding/VerticalAllignment/ButtonStart" to="." method="_on_button_start_mouse_entered"]
[connection signal="pressed" from="Padding/VerticalAllignment/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="mouse_entered" from="Padding/VerticalAllignment/ButtonCredits" to="." method="_on_button_credits_mouse_entered"]
[connection signal="pressed" from="Padding/VerticalAllignment/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="mouse_entered" from="Padding/VerticalAllignment/ButtonQuit" to="." method="_on_button_quit_mouse_entered"]
[connection signal="pressed" from="Padding/VerticalAllignment/ButtonQuit" to="." method="_on_button_quit_pressed"]
[connection signal="finished" from="Audio/Music" to="." method="_on_music_finished"]
[connection signal="finished" from="Audio/Click" to="." method="_on_click_finished"]
[connection signal="return_from_credits" from="Credits" to="." method="_on_credits_return_from_credits"]
